# ruflo

./: README.md
.claude/: settings.json
.github/workflows/: ci.yml  verification-pipeline.yml
v3/: package-lock.json
v3/@claude-flow/browser/: README.md
v3/@claude-flow/browser/src/infrastructure/: agent-browser-adapter.ts
v3/@claude-flow/cache-optimizer/agents/: architect.yaml  coder.yaml  reviewer.yaml  security-architect.yaml  tester.yaml
v3/@claude-flow/cache-optimizer/src/: types.ts
v3/@claude-flow/cli/: README.md
v3/@claude-flow/cli/src/commands/: hooks.ts  neural.ts
v3/@claude-flow/cli/src/init/: statusline-generator.ts
v3/@claude-flow/cli/src/mcp-tools/: hooks-tools.ts
v3/@claude-flow/cli/src/plugins/store/: discovery.ts
v3/@claude-flow/memory-interceptor/src/backends/: interface.ts
v3/implementation/adrs/: ADR-036-test-intelligence-plugin.md
v3/plugins/agentic-qe/__tests__/tools/: generate-tests.test.ts
v3/plugins/agentic-qe/src/: plugin.ts
v3/plugins/code-intelligence/src/bridges/: gnn-bridge.ts
v3/plugins/gastown-bridge/src/: index.ts
v3/plugins/gastown-bridge/wasm/gastown-formula-wasm/: Cargo.toml
v3/plugins/perf-optimizer/src/bridges/: fpga-bridge.ts
v3/plugins/test-intelligence/src/: mcp-tools.ts
