# Gas Town Formula WASM Module
#
# Provides WASM-accelerated formula operations:
# - TOML parsing (352x faster than JavaScript)
# - Variable cooking/substitution
# - Molecule generation
#
# Build with: wasm-pack build --target web

[package]
name = "gastown-formula-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM-accelerated TOML formula parsing and cooking for Gas Town Bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
toml.workspace = true
js-sys.workspace = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = 3
lto = true
